--- a/HTML/demo.html
+++ b/HTML/demo.html
@@ -1,2 +1,9 @@
 <!DOCTYPE html>
-<html></html>
+<html>
+    <head>
+        <title>Git</title>
+    </head>
+     <body>
+        <h1>Git</h1>
+     </body>
+</html>
